AUT-4525: Update tests to use expectations